@@ -1,6 +1,8 @@
 package com.cloudapp.cloud_app.cloud_app.Service;
 
 import org.springframework.stereotype.Service;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -8,7 +10,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import com.cloudapp.cloud_app.cloud_app.Repository.UserLoginRepository;
 import com.cloudapp.cloud_app.cloud_app.model.Users.Users;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 @Service
@@ -23,17 +25,17 @@ public class CustomUserDetailService implements UserDetailsService {
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
 
-        // Step a: repository se user dhoondo
         Optional<Users> userOptional = userLoginRepository.findByUsername(username);
 
-        // Step b: agar nahi mila -> exception throw karo
         Users user = userOptional.orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
 
-        // Step c: apne User entity ko Spring Security ke UserDetails mein convert karo
+        // role ko GrantedAuthority mein convert kar, ROLE_ prefix ke saath
+        GrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + user.getRole().name());
+
         return org.springframework.security.core.userdetails.User.builder()
                 .username(user.getUsername())
                 .password(user.getPassword())
-                .authorities(Collections.emptyList())
+                .authorities(List.of(authority))
                 .build();
     }
 }
